--- a/css/styles.css
+++ b/css/styles.css
@@ -71,7 +71,7 @@ nav h1 {
     display: block;
     height: 0.8vw;
     width: 8vw;
-    background-color: black;
+    background-color: #191444;
     margin-bottom: 1.2vw;
     -webkit-transform-origin: top right;
     -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03); }
@@ -89,7 +89,7 @@ nav {
   align-items: center;
   justify-content: center;
   position: relative;
-  left: .45rem; }
+  left: .5rem; }
 
 nav #nav-list {
   display: flex;
@@ -119,9 +119,15 @@ nav #nav-list {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start; }
-    nav #nav-list #logo img {
-      height: 1.4rem;
+    nav #nav-list #logo #logo-img {
+      -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+      -webkit-transform-origin: center center; }
+    nav #nav-list #logo svg {
+      height: 1.3rem;
       -webkit-transition: transform 0.2s ease-out; }
+      nav #nav-list #logo svg #letters {
+        -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+        -webkit-transform-origin: center center; }
 
 nav #nav-list .nav-li {
   display: inline;
@@ -134,6 +140,14 @@ nav #nav-list .nav-li {
   margin-left: 1.2rem; }
   nav #nav-list .nav-li:first-of-type {
     margin-left: none; }
+  nav #nav-list .nav-li:nth-of-type(6) {
+    background-color: #191444;
+    padding: .25rem .35rem;
+    border-radius: .4rem; }
+    nav #nav-list .nav-li:nth-of-type(6) .underline {
+      display: none; }
+    nav #nav-list .nav-li:nth-of-type(6) a {
+      color: #fcfcfc; }
   nav #nav-list .nav-li a {
     color: black;
     text-transform: uppercase; }
@@ -194,17 +208,22 @@ nav #under-servicios, nav #under-standards, nav #under-industrias {
   -webkit-transform-origin: top center;
   pointer-events: none;
   background-color: white;
+  box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
   position: absolute;
   top: 100%;
   left: -75%;
   width: 250%;
-  padding: .5rem; }
+  padding: .5rem;
+  border-radius: .35rem; }
   nav #under-servicios.eng, nav #under-standards.eng, nav #under-industrias.eng {
     left: -55%;
     width: 220%; }
   nav #under-servicios#under-standards, nav #under-standards#under-standards, nav #under-industrias#under-standards {
     left: -25%;
     width: 150%; }
+  nav #under-servicios#under-industrias, nav #under-standards#under-industrias, nav #under-industrias#under-industrias {
+    left: -45%;
+    width: 180%; }
   nav #under-servicios li, nav #under-standards li, nav #under-industrias li {
     list-style: none;
     -webkit-transform: translateX(-0.5rem);
@@ -306,6 +325,7 @@ nav #under-servicios, nav #under-standards, nav #under-industrias {
   justify-content: flex-start; }
 
 #contact-text {
+  font-family: 'Quicksand', sans-serif;
   z-index: 5;
   color: black;
   text-align: left; }
@@ -427,7 +447,11 @@ footer {
 
 #about-us {
   color: black;
-  background-color: #fcfcfc;
+  background: linear-gradient(180deg, white 0%, rgba(255, 255, 255, 0.85) 10%), url(../img/us.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   padding: 4rem 3rem 4.5rem 3rem;
   width: 100%;
   position: relative; }
@@ -440,8 +464,9 @@ footer {
     text-transform: uppercase;
     color: #191444; }
   #about-us #about-text {
+    font-family: 'Quicksand', sans-serif;
     font-size: 0.5rem;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 1.6;
     letter-spacing: 0.05rem;
     display: flex;
@@ -471,6 +496,7 @@ footer {
     text-align: center;
     color: white; }
   #services #services-icons {
+    font-family: 'Quicksand', sans-serif;
     display: grid;
     padding: .5rem 1.8rem;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -504,6 +530,7 @@ footer {
       text-transform: uppercase;
       text-align: center; }
   #services .services-text {
+    font-family: 'Quicksand', sans-serif;
     padding: 2rem 5rem 0 5rem;
     width: 100%;
     color: white;
@@ -571,6 +598,7 @@ footer {
     text-align: center;
     color: white; }
   #standards #standards-icons {
+    font-family: 'Quicksand', sans-serif;
     display: grid;
     padding: .5rem 6rem;
     grid-template-columns: 1fr 1fr;
@@ -592,7 +620,7 @@ footer {
         height: 2.2rem; }
     #standards #standards-icons p {
       font-size: 0.28rem;
-      font-weight: 400;
+      font-weight: 500;
       line-height: 1.6;
       letter-spacing: 0.05rem;
       width: 100%;
@@ -602,6 +630,7 @@ footer {
       text-transform: uppercase;
       text-align: center; }
   #standards .standards-text {
+    font-family: 'Quicksand', sans-serif;
     padding: 2rem 5rem 0 5rem;
     width: 100%;
     color: white;
@@ -669,6 +698,7 @@ footer {
     text-align: center;
     color: #191444; }
   #industrias #industrias-icons {
+    font-family: 'Quicksand', sans-serif;
     display: grid;
     padding: .5rem 1.8rem;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -687,7 +717,7 @@ footer {
         -webkit-animation: hoverIcon 1s ease-in-out forwards; }
       #industrias #industrias-icons .icon-ind p {
         color: #191444;
-        font-weight: 400; }
+        font-weight: 600; }
       #industrias #industrias-icons .icon-ind p:last-of-type {
         font-size: .6rem;
         font-weight: 700;
@@ -706,6 +736,7 @@ footer {
       text-transform: uppercase;
       text-align: center; }
   #industrias .industrias-text {
+    font-family: 'Quicksand', sans-serif;
     padding: 2rem 5rem 0 5rem;
     width: 100%;
     color: #191444;
@@ -831,7 +862,7 @@ footer {
     color: #191444; }
   #types #sub, #types2 #sub {
     width: 100%;
-    font-size: 0.5rem;
+    font-size: 0.6rem;
     font-weight: 400;
     line-height: 1.2;
     letter-spacing: 0.05rem;
@@ -864,7 +895,7 @@ footer {
           stroke: #191444;
           fill: none; }
     #types #grid p:first-of-type, #types2 #grid p:first-of-type {
-      font-size: 0.35rem;
+      font-size: 0.4rem;
       font-weight: 700;
       line-height: 1.6;
       letter-spacing: 0.05rem;
@@ -875,7 +906,7 @@ footer {
       #types #grid p:first-of-type span, #types2 #grid p:first-of-type span {
         color: #191444; }
     #types #grid p:nth-of-type(2), #types2 #grid p:nth-of-type(2) {
-      font-size: 0.35rem;
+      font-size: 0.4rem;
       font-weight: 400;
       line-height: 1.6;
       letter-spacing: 0.05rem;
@@ -883,7 +914,7 @@ footer {
       color: #252525;
       margin: .5rem 0; }
     #types #grid ul li, #types2 #grid ul li {
-      font-size: 0.35rem;
+      font-size: 0.4rem;
       font-weight: 400;
       line-height: 1.6;
       letter-spacing: 0.05rem;
@@ -910,7 +941,7 @@ footer {
       border: none;
       box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2); }
   .call-to-action p {
-    font-size: 0.35rem;
+    font-size: 0.4rem;
     font-weight: 400;
     line-height: 1.6;
     letter-spacing: 0.05rem;
@@ -928,7 +959,7 @@ footer {
   html {
     font-size: 7vw; }
   header {
-    padding: 0.5rem 0.8rem;
+    padding: 0.4rem 0.8rem .4rem .6rem;
     z-index: 454688888888; }
     header #idioma-mobile {
       display: flex;
@@ -953,7 +984,7 @@ footer {
       top: calc(100% + .5rem);
       right: -.8rem;
       width: 60vw;
-      background-color: black;
+      background-color: #191444;
       border-left: 0.5px solid rgba(117, 117, 117, 0.2);
       height: 100vh;
       -webkit-transform: translateX(100vw);
@@ -965,9 +996,14 @@ footer {
         margin-bottom: 1rem; }
         nav #nav-list .nav-li .underline {
           display: none; }
+        nav #nav-list .nav-li:nth-of-type(6) {
+          background-color: transparent;
+          padding: 0;
+          border-radius: 0; }
         nav #nav-list .nav-li#logo-li {
           display: none; }
         nav #nav-list .nav-li a {
+          color: #fcfcfc;
           font-size: .5rem; }
           nav #nav-list .nav-li a p {
             display: inline-block; }
@@ -979,6 +1015,7 @@ footer {
           margin-bottom: 2rem; }
         nav #nav-list .nav-li svg polyline {
           stroke: #fff;
+          fill: none;
           stroke-width: 3; }
       nav #nav-list #under-servicios, nav #nav-list #under-standards, nav #nav-list #under-industrias {
         display: none;
@@ -1044,11 +1081,14 @@ footer {
       padding-right: 1rem; }
     #services #services-icons svg {
       height: 2rem; }
+    #services #services-icons p {
+      font-size: .35rem; }
   #services .services-text {
     padding: 2rem 2rem 0 2rem;
-    display: block; }
+    display: none;
+    flex-direction: column; }
     #services .services-text.show {
-      display: block; }
+      display: flex; }
     #services .services-text .service-info {
       display: block;
       width: 100%;
@@ -1068,11 +1108,14 @@ footer {
     padding: .5rem 1rem; }
     #standards #standards-icons svg {
       height: 2rem; }
+    #standards #standards-icons p {
+      font-size: .35rem; }
   #standards .standards-text {
     padding: 2rem 2rem 0 2rem;
-    display: block; }
+    display: none;
+    flex-direction: column; }
     #standards .standards-text.show {
-      display: block; }
+      display: flex; }
     #standards .standards-text .standards-info {
       display: block;
       width: 100%;
@@ -1095,11 +1138,14 @@ footer {
       padding-right: 1rem; }
     #industrias #industrias-icons svg {
       height: 2rem; }
+    #industrias #industrias-icons p {
+      font-size: .35rem; }
   #industrias .industrias-text {
     padding: 2rem 2rem 0 2rem;
-    display: block; }
+    display: none;
+    flex-direction: column; }
     #industrias .industrias-text.show {
-      display: block; }
+      display: flex; }
     #industrias .industrias-text .industrias-info {
       display: block;
       width: 100%;
@@ -1141,7 +1187,6 @@ footer {
     footer .footer-socialmedia, footer .footer-contacto {
       margin-top: 0.8rem; }
   #banner-servicios {
-    background: linear-gradient(140deg, rgba(81, 0, 186, 0.7) 0%, #5100ba 100%);
     height: auto;
     width: 100%;
     overflow-y: hidden;
