--- a/css/styles.css
+++ b/css/styles.css
@@ -16,39 +16,60 @@ body {
     display: block; }
 
 header {
-  background-color: white;
+  background-color: transparent;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   padding: 0.4rem 3rem 0.4rem .7rem;
-  border-bottom: 0.5px solid rgba(117, 117, 117, 0.2);
   position: fixed;
   width: 100%;
   z-index: 1500000;
+  -webkit-transition: all .2s ease-out;
   box-shadow: 0rem 0rem 1vh rgba(0, 0, 0, 0.2);
-  -webkit-transition: transform 0.3s ease-out; }
+  border-bottom: 0.5px solid rgba(117, 117, 117, 0.2); }
+  header:hover {
+    background-color: white; }
+    header:hover nav #nav-list a {
+      color: black; }
+    header:hover nav #nav-list .nav-li:nth-of-type(7) a {
+      color: #090B41;
+      border: 1px solid #090B41; }
+    header:hover nav #nav-list #logo #logo-img .cls-11 {
+      fill: #191444; }
+    header:hover #idioma-mobile p {
+      color: black; }
+  header.white {
+    background-color: white; }
+    header.white nav #nav-list a {
+      color: black; }
+    header.white nav #nav-list .nav-li:nth-of-type(7) a {
+      color: #090B41;
+      border: 1px solid #090B41; }
+    header.white nav #nav-list #logo #logo-img .cls-11 {
+      fill: #191444; }
+    header.white #idioma-mobile p {
+      color: black; }
   header #idioma-mobile {
-    position: absolute;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-    right: 1rem;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    display: none; }
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    right: 1rem; }
     header #idioma-mobile p {
-      color: black;
-      font-size: 0.5rem;
-      font-weight: 400;
+      font-size: 0.32rem;
+      font-weight: 500;
       line-height: 1.2;
       letter-spacing: 0.05rem;
       text-transform: uppercase;
       display: inline-block;
-      margin-right: .1rem; }
+      margin-right: .1rem;
+      color: white; }
     header #idioma-mobile svg {
-      width: .8rem;
+      width: .6rem;
       display: inline-block; }
 
 nav h1 {
@@ -62,7 +83,7 @@ nav h1 {
   align-items: center;
   justify-content: flex-start;
   display: none; }
-  #logo-mobile img {
+  #logo-mobile svg {
     height: 1.4rem; }
 
 #nav-toggle {
@@ -89,30 +110,13 @@ nav {
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-left: .7rem; }
+  margin-right: .4rem; }
 
 nav #nav-list {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center; }
-  nav #nav-list #idioma {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center; }
-    nav #nav-list #idioma p {
-      color: black;
-      font-size: 0.3rem;
-      font-weight: 400;
-      line-height: 1.2;
-      letter-spacing: 0.05rem;
-      text-transform: uppercase;
-      display: inline-block;
-      margin-right: .1rem; }
-    nav #nav-list #idioma svg {
-      width: .6rem;
-      display: inline-block; }
   nav #nav-list #logo {
     z-index: 45648888888;
     display: flex;
@@ -122,6 +126,8 @@ nav #nav-list {
     nav #nav-list #logo #logo-img {
       -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
       -webkit-transform-origin: center center; }
+      nav #nav-list #logo #logo-img .cls-11 {
+        fill: #fff; }
     nav #nav-list #logo svg {
       height: 1.3rem;
       -webkit-transition: transform 0.2s ease-out; }
@@ -148,10 +154,21 @@ nav #nav-list .nav-li {
       color: #fcfcfc; }
     nav #nav-list .nav-li#redblue-li.es {
       background: linear-gradient(110deg, #a31717 0%, #a31717 50%, #131a81 50%, #131a81 100%); }
+  nav #nav-list .nav-li#soc-li a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start; }
+    nav #nav-list .nav-li#soc-li a svg {
+      display: inline;
+      height: .62rem; }
+    nav #nav-list .nav-li#soc-li a p {
+      display: inline;
+      margin-right: .2rem; }
   nav #nav-list .nav-li:nth-of-type(7) a {
-    color: #090B41;
+    color: #fcfcfc;
     font-weight: 700;
-    border: 1px solid #090B41;
+    border: 1px solid #fcfcfc;
     padding: .15rem .2rem; }
   nav #nav-list .nav-li:nth-of-type(7) .underline {
     display: none; }
@@ -163,7 +180,7 @@ nav #nav-list .nav-li {
     background-color: #090B41;
     color: #fcfcfc; } }
   nav #nav-list .nav-li a {
-    color: black;
+    color: white;
     text-transform: uppercase; }
     nav #nav-list .nav-li a .show-options {
       display: none;
@@ -1061,111 +1078,259 @@ footer {
       #red-blue-about .about-text .wrapper p, #red-blue-about .about-text .wrapper ul, #red-about .about-text .wrapper p, #red-about .about-text .wrapper ul, #blue-about .about-text .wrapper p, #blue-about .about-text .wrapper ul {
         width: 100%; }
 
+#banner-soc {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(104deg, rgba(9, 11, 65, 0.85) 0%, rgba(9, 11, 65, 0.6) 100%), url(../img/soc-main.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed; }
+  #banner-soc #slider {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 65%; }
+  #banner-soc h3 {
+    font-size: 0.7rem;
+    font-weight: 300;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    color: white;
+    text-align: center;
+    opacity: 0;
+    -webkit-animation: moveInLeft forwards;
+    -webkit-animation-delay: 1s;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: ease-out;
+    position: relative;
+    top: 0;
+    left: 0; }
+  #banner-soc .type-wrap {
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    color: white;
+    text-transform: uppercase;
+    margin-bottom: 1rem; }
+  #banner-soc #arrow {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 5vh;
+    left: 50%;
+    -webkit-animation-name: moveUpDown;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out; }
+    #banner-soc #arrow p {
+      font-size: 0.45rem;
+      font-weight: 400;
+      line-height: 1.2;
+      letter-spacing: 0.05rem;
+      color: white;
+      text-transform: uppercase;
+      margin-bottom: .3rem;
+      display: block; }
+    #banner-soc #arrow svg {
+      display: block;
+      height: 1rem;
+      -webkit-transform: rotate(90deg); }
+
+#soc-about {
+  color: black;
+  background: white;
+  padding: 3rem;
+  width: 100%;
+  position: relative; }
+  #soc-about .about-section {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between; }
+  #soc-about .about-text {
+    width: 45%;
+    font-size: 0.5rem;
+    font-weight: 500;
+    line-height: 1.6;
+    letter-spacing: 0.05rem; }
+    #soc-about .about-text h3 {
+      font-size: 0.8rem;
+      font-weight: 700;
+      line-height: 1.2;
+      letter-spacing: 0.05rem;
+      margin-bottom: 1rem;
+      color: #090B41; }
+
+#soc-grid {
+  background-color: white;
+  width: 100%;
+  color: black;
+  padding: 0 3rem 3rem 3rem; }
+  #soc-grid h3 {
+    font-size: 0.8rem;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 0.05rem;
+    margin-bottom: 1rem;
+    color: #090B41;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2rem; }
+  #soc-grid #grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 2rem;
+    row-gap: 2rem; }
+    #soc-grid #grid .checked {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: .7rem; }
+      #soc-grid #grid .checked svg {
+        height: 1.4rem; }
+        #soc-grid #grid .checked svg path, #soc-grid #grid .checked svg polyline {
+          stroke-width: 8;
+          stroke: #090B41;
+          fill: none; }
+    #soc-grid #grid p {
+      text-align: center;
+      font-size: 0.45rem;
+      font-weight: 400;
+      line-height: 1.6;
+      letter-spacing: 0.05rem;
+      width: 100%; }
+    #soc-grid #grid p:first-of-type {
+      font-weight: 600;
+      margin-bottom: .4rem; }
+
 @media screen and (max-width: 1024px) {
   html {
     font-size: 7vw; }
   header {
-    padding: 0.4rem 0.8rem .4rem .6rem;
+    background-color: white;
+    padding: 0.4rem;
     z-index: 454688888888; }
+    header:hover nav #nav-list .nav-li:nth-of-type(7) a {
+      color: #fcfcfc;
+      border: none; }
     header #idioma-mobile {
       display: flex;
       right: calc(14vw + 0.8rem); }
-  nav {
-    left: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between; }
-    nav #logo-mobile {
-      display: flex; }
-    nav #nav-toggle {
-      z-index: 4788888888888;
+      header #idioma-mobile p {
+        color: black;
+        font-size: .5rem; }
+      header #idioma-mobile svg {
+        width: .8rem; }
+    header nav {
+      left: 0;
       display: flex;
-      flex-direction: column;
-      align-items: flex-end; }
-    nav #nav-list {
-      padding: 1rem;
-      display: block;
-      position: absolute;
-      top: calc(100% + .5rem);
-      right: -.8rem;
-      width: 60vw;
-      background-color: #090B41;
-      border-left: 0.5px solid rgba(117, 117, 117, 0.2);
-      height: 100vh;
-      -webkit-transform: translateX(100vw);
-      -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
-      overflow-y: scroll; }
-      nav #nav-list .nav-li {
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between; }
+      header nav #logo-mobile {
+        display: flex; }
+      header nav #nav-toggle {
+        z-index: 4788888888888;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end; }
+      header nav #nav-list {
+        padding: 1rem;
         display: block;
-        margin: 0;
-        margin-bottom: 1rem; }
-        nav #nav-list .nav-li#redblue-li {
-          background: linear-gradient(110deg, #a31717 0%, #a31717 50%, #131a81 50%, #131a81 100%);
-          padding: .15rem .25rem;
-          border-radius: .2rem;
-          text-align: center; }
-          nav #nav-list .nav-li#redblue-li a {
-            color: #fcfcfc;
+        position: absolute;
+        top: calc(100% + .5rem);
+        right: -.8rem;
+        width: 60vw;
+        background-color: #090B41;
+        border-left: 0.5px solid rgba(117, 117, 117, 0.2);
+        height: 100vh;
+        -webkit-transform: translateX(100vw);
+        -webkit-transition: transform 0.3s cubic-bezier(0.18, 0.57, 0.5, 1.03);
+        overflow-y: scroll; }
+        header nav #nav-list .nav-li {
+          display: block;
+          margin: 0;
+          margin-bottom: 1rem; }
+          header nav #nav-list .nav-li#redblue-li {
+            background: linear-gradient(110deg, #a31717 0%, #a31717 50%, #131a81 50%, #131a81 100%);
+            padding: .15rem .25rem;
+            border-radius: .2rem;
             text-align: center; }
-        nav #nav-list .nav-li:nth-of-type(7) a {
-          color: #fcfcfc;
-          font-weight: 500;
-          border: none;
-          padding: none; }
-        nav #nav-list .nav-li:nth-of-type(7) a:hover {
-          -webkit-animation: none; }
-        nav #nav-list .nav-li .underline {
-          display: none; }
-        nav #nav-list .nav-li:nth-of-type(6) {
-          background-color: transparent;
-          padding: 0;
-          border-radius: 0; }
-        nav #nav-list .nav-li#logo-li {
-          display: none; }
-        nav #nav-list .nav-li a {
-          color: #fcfcfc;
-          font-size: .5rem; }
-          nav #nav-list .nav-li a p {
-            display: inline-block; }
-          nav #nav-list .nav-li a .show-options {
-            display: inline-block;
-            position: absolute;
-            right: 0; }
-        nav #nav-list .nav-li:last-of-type {
-          margin-bottom: 2rem; }
-        nav #nav-list .nav-li svg polyline {
-          stroke: #fff;
-          fill: none;
-          stroke-width: 3; }
-      nav #nav-list #under-servicios, nav #nav-list #under-standards, nav #nav-list #under-industrias {
-        display: none;
-        opacity: 1;
-        pointer-events: visible;
-        background-color: transparent;
-        position: relative;
-        top: 0;
-        left: 0;
-        width: auto;
-        padding: 0;
-        box-shadow: none; }
-        nav #nav-list #under-servicios#under-standards, nav #nav-list #under-standards#under-standards, nav #nav-list #under-industrias#under-standards {
-          left: 0;
-          width: auto; }
-        nav #nav-list #under-servicios li, nav #nav-list #under-standards li, nav #nav-list #under-industrias li {
-          -webkit-transform: translateX(0);
+            header nav #nav-list .nav-li#redblue-li a {
+              color: #fcfcfc;
+              text-align: center; }
+          header nav #nav-list .nav-li:nth-of-type(7) a {
+            color: #fcfcfc;
+            font-weight: 500;
+            border: none;
+            padding: 0; }
+          header nav #nav-list .nav-li:nth-of-type(7) a:hover {
+            -webkit-animation: none; }
+          header nav #nav-list .nav-li .underline {
+            display: none; }
+          header nav #nav-list .nav-li:nth-of-type(6) {
+            background-color: transparent;
+            padding: 0;
+            border-radius: 0; }
+          header nav #nav-list .nav-li#logo-li {
+            display: none; }
+          header nav #nav-list .nav-li a {
+            color: #fcfcfc;
+            font-size: .5rem; }
+            header nav #nav-list .nav-li a p {
+              display: inline-block; }
+            header nav #nav-list .nav-li a .show-options {
+              display: inline-block;
+              position: absolute;
+              right: 0; }
+          header nav #nav-list .nav-li:last-of-type {
+            margin-bottom: 2rem; }
+          header nav #nav-list .nav-li svg polyline {
+            stroke: #fff;
+            fill: none;
+            stroke-width: 3; }
+        header nav #nav-list #under-servicios, header nav #nav-list #under-standards, header nav #nav-list #under-industrias {
+          display: none;
           opacity: 1;
-          margin-left: 0;
-          margin-bottom: .5rem; }
-          nav #nav-list #under-servicios li:last-of-type, nav #nav-list #under-standards li:last-of-type, nav #nav-list #under-industrias li:last-of-type {
-            margin-bottom: .1rem; }
-          nav #nav-list #under-servicios li a, nav #nav-list #under-standards li a, nav #nav-list #under-industrias li a {
-            text-transform: none;
-            font-weight: 300; }
-      nav #nav-list #idioma-li {
-        display: none; }
-      nav #nav-list #logo {
-        display: none; }
+          pointer-events: visible;
+          background-color: transparent;
+          position: relative;
+          top: 0;
+          left: 0;
+          width: auto;
+          padding: 0;
+          box-shadow: none; }
+          header nav #nav-list #under-servicios#under-standards, header nav #nav-list #under-standards#under-standards, header nav #nav-list #under-industrias#under-standards {
+            left: 0;
+            width: auto; }
+          header nav #nav-list #under-servicios li, header nav #nav-list #under-standards li, header nav #nav-list #under-industrias li {
+            -webkit-transform: translateX(0);
+            opacity: 1;
+            margin-left: 0;
+            margin-bottom: .5rem; }
+            header nav #nav-list #under-servicios li:last-of-type, header nav #nav-list #under-standards li:last-of-type, header nav #nav-list #under-industrias li:last-of-type {
+              margin-bottom: .1rem; }
+            header nav #nav-list #under-servicios li a, header nav #nav-list #under-standards li a, header nav #nav-list #under-industrias li a {
+              text-transform: none;
+              font-weight: 300; }
+        header nav #nav-list #idioma-li {
+          display: none; }
+        header nav #nav-list #logo {
+          display: none; }
   #banner {
     height: 90vh;
     overflow-x: hidden; }
@@ -1344,7 +1509,26 @@ footer {
       #red-blue-about .about-text .wrapper, #red-about .about-text .wrapper, #blue-about .about-text .wrapper {
         width: 100%; }
         #red-blue-about .about-text .wrapper p, #red-blue-about .about-text .wrapper ul, #red-about .about-text .wrapper p, #red-about .about-text .wrapper ul, #blue-about .about-text .wrapper p, #blue-about .about-text .wrapper ul {
-          width: 100%; } }
+          width: 100%; }
+  #banner-soc #slider {
+    width: 90%; }
+  #soc-about {
+    padding: 3rem 2rem; }
+    #soc-about .about-section {
+      display: block; }
+    #soc-about .about-text {
+      width: 100%; }
+      #soc-about .about-text:first-of-type {
+        margin-bottom: 2rem; }
+  #soc-grid {
+    background-color: white;
+    width: 100%;
+    color: black;
+    padding: 0 2rem 0 2rem; }
+    #soc-grid #grid {
+      display: block; }
+      #soc-grid #grid .grid-item {
+        margin-bottom: 1.5rem; } }
 
 @media screen and (orientation: landscape) and (max-width: 1024px) {
   html {
